apply plugin: 'java'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.portswigger.burp.extender:burp-extender-api:2.3'
    implementation group: 'org.json', name: 'json', version: '20230227'
    implementation 'org.json:json:20230227'
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'resources'
        }
    }
}

task fatJar(type: Jar) {

    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

compileJava {
    targetCompatibility '1.8'
    sourceCompatibility '1.8'
}
